[gd_scene load_steps=2 format=3 uid="uid://d3rv6ajd0fueq"]

[ext_resource type="Script" path="res://scripts/network/Chat.gd" id="1_as2nd"]

[node name="Chat" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_as2nd")

[node name="MessageDisplay" type="RichTextLabel" parent="."]
layout_mode = 0
offset_top = 417.0
offset_right = 217.0
offset_bottom = 617.0

[node name="LeaveButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -103.0
offset_bottom = 53.0
grow_horizontal = 0
text = "Leave Game"

[node name="MessageInput" type="LineEdit" parent="."]
layout_mode = 2
offset_left = 1.0
offset_top = 616.0
offset_right = 171.0
offset_bottom = 647.0

[node name="SendButton" type="Button" parent="."]
layout_mode = 2
offset_left = 172.0
offset_top = 616.0
offset_right = 219.0
offset_bottom = 647.0
text = "Send"

[node name="MessageTimer" type="Timer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="LeaveButton" to="." method="_on_leave_button_pressed"]
[connection signal="focus_entered" from="MessageInput" to="." method="_on_message_input_focus_entered"]
[connection signal="text_submitted" from="MessageInput" to="." method="_on_message_input_text_submitted"]
[connection signal="pressed" from="SendButton" to="." method="_on_send_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
